fix: update collapse spaces

--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -1,7 +1,3 @@
 .accordion-button {
   font-weight: 700;
 }
-
-.w-90 {
-  width: 90%;
-}
